# iomete-marketplace-jobs

./: .dockerignore  .gitignore  Makefile  README.md  application.conf  application.json  build.gradle.kts  driver.py  gradle.properties  job.py  mock.py  pyproject.toml  readme.md  settings.gradle.kts  setup.cfg  test_job.py
.github/workflows/: marketplace_integration_tests.yml
catalog-sync-job/: Dockerfile  Makefile  build.gradle.kts  readme.md
catalog-sync-job/conf/: spark-defaults.conf
catalog-sync-job/src/main/kotlin/com/iomete/catalogsync/: App.kt  CoreServiceClient.kt  DataSync.kt  LakehouseMetadataExtractor.kt  Model.kt  SqlClient.kt  Utils.kt
catalog-sync-job/src/main/kotlin/com/iomete/catalogsync/extract/: TableExtractorFactory.kt  interfaces.kt  model.kt
catalog-sync-job/src/main/kotlin/com/iomete/catalogsync/extract/datasets/: DatasourceV1LikeTableExtractor.kt  GenericTableExtractor.kt  IcebergTableExtractor.kt  ViewExtractor.kt
catalog-sync-job/src/main/kotlin/com/iomete/catalogsync/extract/utils/: ColumnTagExtractor.kt
catalog-sync-job/src/main/resources/: application.yaml
catalog-sync-job/src/test/kotlin/com/iomete/catalogsync/: ProcessTableColumnsTest.kt
dags/: oracle_sync_full_load_spark_connect_dag.py  oracle_sync_incremental_load_spark_connect_dag.py  oracle_sync_last_5_days_spark_connect_dag.py  oracle_sync_spark_job_dag.py  oracle_sync_timeperiod_spark_connect_dag.py
data-compaction-job/: Dockerfile  Makefile  README.md  driver.py  pyproject.toml
data-compaction-job/data_compaction_job/: config.py  logger.py  sql_compaction.py  stats_emitter.py
data-compaction-job/tests/: _spark_session.py  test_data_compaction_job.py
docker/: Dockerfile  Spark-Job-Dockerfile
infra/: Dockerfile  deps_builder.sh  requirements-dev.txt
iomete-catalog-sync/: build.gradle.kts
iomete-catalog-sync/catalog-sync-job/: .dockerignore  Dockerfile  Makefile  build.gradle.kts  readme.md
iomete-catalog-sync/catalog-sync-job/conf/: log4j2.properties
iomete-catalog-sync/catalog-sync-job/src/main/kotlin/com/iomete/catalogsync/: App.kt  AppConfig.kt  DataSync.kt  LakehouseMetadataExtractor.kt  PresidioClient.kt
iomete-catalog-sync/catalog-sync-job/src/main/kotlin/com/iomete/catalogsync/extract/datasets/: GenericTableExtractor.kt  IcebergTableExtractor.kt  ViewExtractor.kt
iomete-oracle-sync/: .dockerignore  .gitignore  driver.py  readme.md
iomete-oracle-sync/docker/: Spark-Connect-Dockerfile
iomete-oracle-sync/iomete_oracle_sync/: main.py
iomete-oracle-sync/iomete_oracle_sync/connection/: source.py
iomete-oracle-sync/iomete_oracle_sync/data_sync/: syncer.py
iomete-oracle-sync/iomete_oracle_sync/data_sync/conf_parser/: data_sync_config.py
iomete-oracle-sync/iomete_oracle_sync/utils/: config_utils.py  spark_session.py
iomete-oracle-sync/requirements/: spark_connect_requirements.txt
iomete_oracle_sync/: main.py
iomete_oracle_sync/connection/: destination.py  source.py
iomete_oracle_sync/data_sync/: _data_source_syncer.py
iomete_oracle_sync/data_sync/sync_strategy/: sync_mode.py  sync_strategy.py
iomete_oracle_sync/logger/: iomete_logger.py
iomete_oracle_sync/utils/: spark_session.py  time_utils.py
kafka-iceberg-stream/table_sync/: app_conf.json  job.py
kinesis-streaming-job/: application-dev.conf  job.py  query_table.py  readme.md  test_kinesis_data_writer.py
kinesis-streaming-job/infra/: Dockerfile  requirements.txt
kinesis-streaming-job/spark_conf/: log4j.properties
kubernetes-event-collector/: Dockerfile  Makefile  README.md  app.py  pyproject.toml
kubernetes-event-collector/tests/: test_kubernetes-event-collector.py
query-scheduler-job/: Makefile  application.conf  job.py
query-scheduler-job/spark_conf/: spark-defaults.conf
query_scheduler_job/: __init__.py  config.py  iomete_logger.py  main.py  utils.py
requirements/: spark_job_requirements.txt
spark_conf/: spark-defaults.conf
src/iomete-marketplace-jobs/: utils.py
table_sync/: readme.md
table_sync/infra/: Dockerfile
table_sync/utils/: certificate_handler.py  config.py  spark_session.py
tests/: __init__.py  config_test.py  test_query_scheduler_job.py
tpcds-query-executor/: .gitignore  Dockerfile  Makefile  readme.md
tpcds-query-executor/src/main/kotlin/com/iomete/tpcds/: App.kt
tpcds-query-executor/src/main/resources/: application.yaml
