[project]
name = "iomete-marketplace-jobs"
version = "0.1.0"
description = "This repo contains marketplace jobs that can run smoothly on IOMETE platform"
authors = [
    {name = "IOMETE"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
