[metadata]
name = query_scheduler_job
version = 0.1.0
author = Farhad M.
author_email = farhad@iomete.com
description = query scheduler job
long_description = file: readme.md
long_description_content_type = text/markdown
keywords = query_scheduler_job
license = Apache License 2.0
classifiers =
	Programming Language :: Python :: 3

[options]
package_dir =
	= query_scheduler_job
install_requires =
	pyhocon~=0.3.59
	setuptools~=60.2.0
	structlog~=21.5.0

[options.extras_require]
dev =
	pyspark==3.1.3
	pytest==7.1.2
