[project]
name = "kubernetes_event_collector"
version = "1.0.0"
description = "IOMETE: Scraping and Storing Kubernetes Events"
license = "Apache License 2.0"
authors = [
    {name = "IOMETE"}
]
package-mode = false
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyhocon (==0.3.59)",
    "boto3 (>=1.28.0)",
    "kubernetes (>=28.1.0)",
    "requests (==2.26.0)",
    "pandas (>=2.0.0)",
    "psycopg2-binary (>=2.9.6)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pyspark = "3.5.3"
pytest = ">=7.0.0"
bandit = "^1.7.5"
blue = ">=0.9.1, <1.0.0"
interrogate = ">=1.5.0, <2.0.0"
isort = ">=5.10.1,<7.0.0"
markdown = ">=3.4.0, <4.0.0"
mdformat-gfm = ">=0.3.5, <1.0.0"
mypy = "^1.8.0"
nbmake =  ">=1.4.3, <2.0.0"
setuptools = ">=80.0.0"

[tool.interrogate]
color = true
exclude = ["setup.py", "docs", "build", "tests"]
fail-under = 50.0
generate-badge = "."
badge-format = "svg"
ignore-init-method = false
ignore-init-module = true
ignore-magic = true
ignore-module = true
ignore-nested-classes = true
ignore-nested-functions = true
ignore-private = true
ignore-property-decorators = true
ignore-regex = []
ignore-semiprivate = true
ignore-setters = true
omit-covered-files = true
quiet = false
verbose = 2
whitelist-regex = []

[tool.blue]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
